<resources>
    <string name="app_name">ProjetAMIO</string>
    <string name="pointI"> "???"</string>
    <string name="SS"> Service Status:</string>
    <string name="LR"> Last result:</string>
    <string name="LA"> Last alarm:</string>
    <string name="switched"> "   "switch</string>
    <string name="switched1"> "   "switch</string>
    <string name="boot"> "   "start on boot</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
