<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAA8A8"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.projetamio.SettingsFragment"
        android:layout_width="match_parent"
        android:layout_height="400dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:background="#ACC8E5"
                android:gravity="center"
                android:text="@string/SS" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:background="#ACC8B2"
                android:gravity="center"
                android:text="@string/LR" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:background="#CEDA59"
                android:gravity="center"
                android:text="@string/LA" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:background="#8EB8E3"
                android:gravity="center"
                android:text="@string/pointI"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:background="#91C19C"
                android:gravity="center"
                android:text="@string/pointI" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:background="#C9D838"
                android:gravity="center"
                android:text="@string/pointI" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CC9999"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:layout_weight="1"
            android:background="#8FD392"
            android:text="@string/switched" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="136dp"
            android:layout_weight="1"
            android:background="#ACC8A2"
            android:text="@string/switched" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="1.0">

        <Switch
            android:id="@+id/switch3"
            android:layout_width="wrap_content"
            android:layout_height="119dp"
            android:layout_weight="1"
            android:background="#CAA8A8"
            android:text="@string/boot" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="112dp"
            android:layout_weight="1"
            android:text="Preferences" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
